// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`_document should match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CustomDocument />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Head>
          <meta
            content="width=device-width, initial-scale=1.0"
            name="viewport"
          />
          <meta
            content="ie=edge"
            httpEquiv="X-UA-Compatible"
          />
          <meta
            content="#343e46"
            name="theme-color"
          />
          <link
            href="/static/icons/icon57.png"
            rel="apple-touch-icon"
            sizes="57x57"
          />
          <link
            href="/static/icons/icon76.png"
            rel="apple-touch-icon"
            sizes="76x76"
          />
          <link
            href="/static/icons/icon120.png"
            rel="apple-touch-icon"
            sizes="120x120"
          />
          <link
            href="/static/icons/icon152.png"
            rel="apple-touch-icon"
            sizes="152x152"
          />
          <link
            href="/static/icons/icon167.png"
            rel="apple-touch-icon"
            sizes="167x167"
          />
          <link
            href="/static/icons/icon180.png"
            rel="apple-touch-icon"
            sizes="180x180"
          />
          <link
            href="/static/icons/icon192.png"
            rel="icon"
            sizes="192x192"
          />
          <link
            href="/static/icons/icon128.png"
            rel="icon"
            sizes="128x128"
          />
          <meta
            content="Gabriel Duarte"
            name="apple-mobile-web-app-title"
          />
          <meta
            content="default"
            name="apple-mobile-web-app-status-bar-style"
          />
          <meta
            content="yes"
            name="apple-mobile-web-app-capable"
          />
          <meta
            content="yes"
            name="mobile-web-app-capable"
          />
          <link
            href="/static/manifest.json"
            rel="manifest"
          />
          <meta
            content="This is a portfolio that gives you information about who Gabriel Duarte is, and all of his latest works."
            name="Description"
          />
          <title>
            Gabriel Duarte's Portfolio
          </title>
          <link
            href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500"
            rel="stylesheet"
          />
          <link
            href="https://cdn.jsdelivr.net/npm/modern-normalize@0.4.0/modern-normalize.min.css"
            rel="stylesheet"
          />
        </Head>,
        <body>
          <Main />
          <NextScript />
        </body>,
      ],
      "lang": "en",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            false,
            <meta
              content="width=device-width, initial-scale=1.0"
              name="viewport"
            />,
            <meta
              content="ie=edge"
              httpEquiv="X-UA-Compatible"
            />,
            <meta
              content="#343e46"
              name="theme-color"
            />,
            <link
              href="/static/icons/icon57.png"
              rel="apple-touch-icon"
              sizes="57x57"
            />,
            <link
              href="/static/icons/icon76.png"
              rel="apple-touch-icon"
              sizes="76x76"
            />,
            <link
              href="/static/icons/icon120.png"
              rel="apple-touch-icon"
              sizes="120x120"
            />,
            <link
              href="/static/icons/icon152.png"
              rel="apple-touch-icon"
              sizes="152x152"
            />,
            <link
              href="/static/icons/icon167.png"
              rel="apple-touch-icon"
              sizes="167x167"
            />,
            <link
              href="/static/icons/icon180.png"
              rel="apple-touch-icon"
              sizes="180x180"
            />,
            <link
              href="/static/icons/icon192.png"
              rel="icon"
              sizes="192x192"
            />,
            <link
              href="/static/icons/icon128.png"
              rel="icon"
              sizes="128x128"
            />,
            <meta
              content="Gabriel Duarte"
              name="apple-mobile-web-app-title"
            />,
            <meta
              content="default"
              name="apple-mobile-web-app-status-bar-style"
            />,
            <meta
              content="yes"
              name="apple-mobile-web-app-capable"
            />,
            <meta
              content="yes"
              name="mobile-web-app-capable"
            />,
            <link
              href="/static/manifest.json"
              rel="manifest"
            />,
            <meta
              content="This is a portfolio that gives you information about who Gabriel Duarte is, and all of his latest works."
              name="Description"
            />,
            <title>
              Gabriel Duarte's Portfolio
            </title>,
            <link
              href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500"
              rel="stylesheet"
            />,
            <link
              href="https://cdn.jsdelivr.net/npm/modern-normalize@0.4.0/modern-normalize.min.css"
              rel="stylesheet"
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "content": "width=device-width, initial-scale=1.0",
              "name": "viewport",
            },
            "ref": null,
            "rendered": null,
            "type": "meta",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "content": "ie=edge",
              "httpEquiv": "X-UA-Compatible",
            },
            "ref": null,
            "rendered": null,
            "type": "meta",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "content": "#343e46",
              "name": "theme-color",
            },
            "ref": null,
            "rendered": null,
            "type": "meta",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "href": "/static/icons/icon57.png",
              "rel": "apple-touch-icon",
              "sizes": "57x57",
            },
            "ref": null,
            "rendered": null,
            "type": "link",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "href": "/static/icons/icon76.png",
              "rel": "apple-touch-icon",
              "sizes": "76x76",
            },
            "ref": null,
            "rendered": null,
            "type": "link",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "href": "/static/icons/icon120.png",
              "rel": "apple-touch-icon",
              "sizes": "120x120",
            },
            "ref": null,
            "rendered": null,
            "type": "link",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "href": "/static/icons/icon152.png",
              "rel": "apple-touch-icon",
              "sizes": "152x152",
            },
            "ref": null,
            "rendered": null,
            "type": "link",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "href": "/static/icons/icon167.png",
              "rel": "apple-touch-icon",
              "sizes": "167x167",
            },
            "ref": null,
            "rendered": null,
            "type": "link",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "href": "/static/icons/icon180.png",
              "rel": "apple-touch-icon",
              "sizes": "180x180",
            },
            "ref": null,
            "rendered": null,
            "type": "link",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "href": "/static/icons/icon192.png",
              "rel": "icon",
              "sizes": "192x192",
            },
            "ref": null,
            "rendered": null,
            "type": "link",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "href": "/static/icons/icon128.png",
              "rel": "icon",
              "sizes": "128x128",
            },
            "ref": null,
            "rendered": null,
            "type": "link",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "content": "Gabriel Duarte",
              "name": "apple-mobile-web-app-title",
            },
            "ref": null,
            "rendered": null,
            "type": "meta",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "content": "default",
              "name": "apple-mobile-web-app-status-bar-style",
            },
            "ref": null,
            "rendered": null,
            "type": "meta",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "content": "yes",
              "name": "apple-mobile-web-app-capable",
            },
            "ref": null,
            "rendered": null,
            "type": "meta",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "content": "yes",
              "name": "mobile-web-app-capable",
            },
            "ref": null,
            "rendered": null,
            "type": "meta",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "href": "/static/manifest.json",
              "rel": "manifest",
            },
            "ref": null,
            "rendered": null,
            "type": "link",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "content": "This is a portfolio that gives you information about who Gabriel Duarte is, and all of his latest works.",
              "name": "Description",
            },
            "ref": null,
            "rendered": null,
            "type": "meta",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Gabriel Duarte's Portfolio",
            },
            "ref": null,
            "rendered": "Gabriel Duarte's Portfolio",
            "type": "title",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "href": "https://fonts.googleapis.com/css?family=Montserrat:300,400,500",
              "rel": "stylesheet",
            },
            "ref": null,
            "rendered": null,
            "type": "link",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "href": "https://cdn.jsdelivr.net/npm/modern-normalize@0.4.0/modern-normalize.min.css",
              "rel": "stylesheet",
            },
            "ref": null,
            "rendered": null,
            "type": "link",
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Main />,
            <NextScript />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "body",
      },
    ],
    "type": "html",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Head>
            <meta
              content="width=device-width, initial-scale=1.0"
              name="viewport"
            />
            <meta
              content="ie=edge"
              httpEquiv="X-UA-Compatible"
            />
            <meta
              content="#343e46"
              name="theme-color"
            />
            <link
              href="/static/icons/icon57.png"
              rel="apple-touch-icon"
              sizes="57x57"
            />
            <link
              href="/static/icons/icon76.png"
              rel="apple-touch-icon"
              sizes="76x76"
            />
            <link
              href="/static/icons/icon120.png"
              rel="apple-touch-icon"
              sizes="120x120"
            />
            <link
              href="/static/icons/icon152.png"
              rel="apple-touch-icon"
              sizes="152x152"
            />
            <link
              href="/static/icons/icon167.png"
              rel="apple-touch-icon"
              sizes="167x167"
            />
            <link
              href="/static/icons/icon180.png"
              rel="apple-touch-icon"
              sizes="180x180"
            />
            <link
              href="/static/icons/icon192.png"
              rel="icon"
              sizes="192x192"
            />
            <link
              href="/static/icons/icon128.png"
              rel="icon"
              sizes="128x128"
            />
            <meta
              content="Gabriel Duarte"
              name="apple-mobile-web-app-title"
            />
            <meta
              content="default"
              name="apple-mobile-web-app-status-bar-style"
            />
            <meta
              content="yes"
              name="apple-mobile-web-app-capable"
            />
            <meta
              content="yes"
              name="mobile-web-app-capable"
            />
            <link
              href="/static/manifest.json"
              rel="manifest"
            />
            <meta
              content="This is a portfolio that gives you information about who Gabriel Duarte is, and all of his latest works."
              name="Description"
            />
            <title>
              Gabriel Duarte's Portfolio
            </title>
            <link
              href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500"
              rel="stylesheet"
            />
            <link
              href="https://cdn.jsdelivr.net/npm/modern-normalize@0.4.0/modern-normalize.min.css"
              rel="stylesheet"
            />
          </Head>,
          <body>
            <Main />
            <NextScript />
          </body>,
        ],
        "lang": "en",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              false,
              <meta
                content="width=device-width, initial-scale=1.0"
                name="viewport"
              />,
              <meta
                content="ie=edge"
                httpEquiv="X-UA-Compatible"
              />,
              <meta
                content="#343e46"
                name="theme-color"
              />,
              <link
                href="/static/icons/icon57.png"
                rel="apple-touch-icon"
                sizes="57x57"
              />,
              <link
                href="/static/icons/icon76.png"
                rel="apple-touch-icon"
                sizes="76x76"
              />,
              <link
                href="/static/icons/icon120.png"
                rel="apple-touch-icon"
                sizes="120x120"
              />,
              <link
                href="/static/icons/icon152.png"
                rel="apple-touch-icon"
                sizes="152x152"
              />,
              <link
                href="/static/icons/icon167.png"
                rel="apple-touch-icon"
                sizes="167x167"
              />,
              <link
                href="/static/icons/icon180.png"
                rel="apple-touch-icon"
                sizes="180x180"
              />,
              <link
                href="/static/icons/icon192.png"
                rel="icon"
                sizes="192x192"
              />,
              <link
                href="/static/icons/icon128.png"
                rel="icon"
                sizes="128x128"
              />,
              <meta
                content="Gabriel Duarte"
                name="apple-mobile-web-app-title"
              />,
              <meta
                content="default"
                name="apple-mobile-web-app-status-bar-style"
              />,
              <meta
                content="yes"
                name="apple-mobile-web-app-capable"
              />,
              <meta
                content="yes"
                name="mobile-web-app-capable"
              />,
              <link
                href="/static/manifest.json"
                rel="manifest"
              />,
              <meta
                content="This is a portfolio that gives you information about who Gabriel Duarte is, and all of his latest works."
                name="Description"
              />,
              <title>
                Gabriel Duarte's Portfolio
              </title>,
              <link
                href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500"
                rel="stylesheet"
              />,
              <link
                href="https://cdn.jsdelivr.net/npm/modern-normalize@0.4.0/modern-normalize.min.css"
                rel="stylesheet"
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "content": "width=device-width, initial-scale=1.0",
                "name": "viewport",
              },
              "ref": null,
              "rendered": null,
              "type": "meta",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "content": "ie=edge",
                "httpEquiv": "X-UA-Compatible",
              },
              "ref": null,
              "rendered": null,
              "type": "meta",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "content": "#343e46",
                "name": "theme-color",
              },
              "ref": null,
              "rendered": null,
              "type": "meta",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "href": "/static/icons/icon57.png",
                "rel": "apple-touch-icon",
                "sizes": "57x57",
              },
              "ref": null,
              "rendered": null,
              "type": "link",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "href": "/static/icons/icon76.png",
                "rel": "apple-touch-icon",
                "sizes": "76x76",
              },
              "ref": null,
              "rendered": null,
              "type": "link",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "href": "/static/icons/icon120.png",
                "rel": "apple-touch-icon",
                "sizes": "120x120",
              },
              "ref": null,
              "rendered": null,
              "type": "link",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "href": "/static/icons/icon152.png",
                "rel": "apple-touch-icon",
                "sizes": "152x152",
              },
              "ref": null,
              "rendered": null,
              "type": "link",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "href": "/static/icons/icon167.png",
                "rel": "apple-touch-icon",
                "sizes": "167x167",
              },
              "ref": null,
              "rendered": null,
              "type": "link",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "href": "/static/icons/icon180.png",
                "rel": "apple-touch-icon",
                "sizes": "180x180",
              },
              "ref": null,
              "rendered": null,
              "type": "link",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "href": "/static/icons/icon192.png",
                "rel": "icon",
                "sizes": "192x192",
              },
              "ref": null,
              "rendered": null,
              "type": "link",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "href": "/static/icons/icon128.png",
                "rel": "icon",
                "sizes": "128x128",
              },
              "ref": null,
              "rendered": null,
              "type": "link",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "content": "Gabriel Duarte",
                "name": "apple-mobile-web-app-title",
              },
              "ref": null,
              "rendered": null,
              "type": "meta",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "content": "default",
                "name": "apple-mobile-web-app-status-bar-style",
              },
              "ref": null,
              "rendered": null,
              "type": "meta",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "content": "yes",
                "name": "apple-mobile-web-app-capable",
              },
              "ref": null,
              "rendered": null,
              "type": "meta",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "content": "yes",
                "name": "mobile-web-app-capable",
              },
              "ref": null,
              "rendered": null,
              "type": "meta",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "href": "/static/manifest.json",
                "rel": "manifest",
              },
              "ref": null,
              "rendered": null,
              "type": "link",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "content": "This is a portfolio that gives you information about who Gabriel Duarte is, and all of his latest works.",
                "name": "Description",
              },
              "ref": null,
              "rendered": null,
              "type": "meta",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Gabriel Duarte's Portfolio",
              },
              "ref": null,
              "rendered": "Gabriel Duarte's Portfolio",
              "type": "title",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "href": "https://fonts.googleapis.com/css?family=Montserrat:300,400,500",
                "rel": "stylesheet",
              },
              "ref": null,
              "rendered": null,
              "type": "link",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "href": "https://cdn.jsdelivr.net/npm/modern-normalize@0.4.0/modern-normalize.min.css",
                "rel": "stylesheet",
              },
              "ref": null,
              "rendered": null,
              "type": "link",
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Main />,
              <NextScript />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "body",
        },
      ],
      "type": "html",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`_document should match the snapshot using the prod env 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CustomDocument />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Head>
          <UNDEFINED>
            <script
              async={true}
              src="https://www.googletagmanager.com/gtag/js?id=UA-106120004-2"
            />
            <script
              dangerouslySetInnerHTML={
                Object {
                  "__html": "window.dataLayer = window.dataLayer || [];
                  function gtag(){dataLayer.push(arguments);}
                  gtag('js', new Date());
                  gtag('config', 'UA-106120004-2');",
                }
              }
            />
            <script
              dangerouslySetInnerHTML={
                Object {
                  "__html": "(function(h,o,t,j,a,r){
                    h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
                    h._hjSettings={hjid:848161,hjsv:6};
                    a=o.getElementsByTagName('head')[0];
                    r=o.createElement('script');r.async=1;
                    r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
                    a.appendChild(r);
                })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');",
                }
              }
            />
          </UNDEFINED>
          <meta
            content="width=device-width, initial-scale=1.0"
            name="viewport"
          />
          <meta
            content="ie=edge"
            httpEquiv="X-UA-Compatible"
          />
          <meta
            content="#343e46"
            name="theme-color"
          />
          <link
            href="/static/icons/icon57.png"
            rel="apple-touch-icon"
            sizes="57x57"
          />
          <link
            href="/static/icons/icon76.png"
            rel="apple-touch-icon"
            sizes="76x76"
          />
          <link
            href="/static/icons/icon120.png"
            rel="apple-touch-icon"
            sizes="120x120"
          />
          <link
            href="/static/icons/icon152.png"
            rel="apple-touch-icon"
            sizes="152x152"
          />
          <link
            href="/static/icons/icon167.png"
            rel="apple-touch-icon"
            sizes="167x167"
          />
          <link
            href="/static/icons/icon180.png"
            rel="apple-touch-icon"
            sizes="180x180"
          />
          <link
            href="/static/icons/icon192.png"
            rel="icon"
            sizes="192x192"
          />
          <link
            href="/static/icons/icon128.png"
            rel="icon"
            sizes="128x128"
          />
          <meta
            content="Gabriel Duarte"
            name="apple-mobile-web-app-title"
          />
          <meta
            content="default"
            name="apple-mobile-web-app-status-bar-style"
          />
          <meta
            content="yes"
            name="apple-mobile-web-app-capable"
          />
          <meta
            content="yes"
            name="mobile-web-app-capable"
          />
          <link
            href="/static/manifest.json"
            rel="manifest"
          />
          <meta
            content="This is a portfolio that gives you information about who Gabriel Duarte is, and all of his latest works."
            name="Description"
          />
          <title>
            Gabriel Duarte's Portfolio
          </title>
          <link
            href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500"
            rel="stylesheet"
          />
          <link
            href="https://cdn.jsdelivr.net/npm/modern-normalize@0.4.0/modern-normalize.min.css"
            rel="stylesheet"
          />
        </Head>,
        <body>
          <Main />
          <NextScript />
        </body>,
      ],
      "lang": "en",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <UNDEFINED>
              <script
                async={true}
                src="https://www.googletagmanager.com/gtag/js?id=UA-106120004-2"
              />
              <script
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "window.dataLayer = window.dataLayer || [];
                  function gtag(){dataLayer.push(arguments);}
                  gtag('js', new Date());
                  gtag('config', 'UA-106120004-2');",
                  }
                }
              />
              <script
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "(function(h,o,t,j,a,r){
                    h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
                    h._hjSettings={hjid:848161,hjsv:6};
                    a=o.getElementsByTagName('head')[0];
                    r=o.createElement('script');r.async=1;
                    r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
                    a.appendChild(r);
                })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');",
                  }
                }
              />
            </UNDEFINED>,
            <meta
              content="width=device-width, initial-scale=1.0"
              name="viewport"
            />,
            <meta
              content="ie=edge"
              httpEquiv="X-UA-Compatible"
            />,
            <meta
              content="#343e46"
              name="theme-color"
            />,
            <link
              href="/static/icons/icon57.png"
              rel="apple-touch-icon"
              sizes="57x57"
            />,
            <link
              href="/static/icons/icon76.png"
              rel="apple-touch-icon"
              sizes="76x76"
            />,
            <link
              href="/static/icons/icon120.png"
              rel="apple-touch-icon"
              sizes="120x120"
            />,
            <link
              href="/static/icons/icon152.png"
              rel="apple-touch-icon"
              sizes="152x152"
            />,
            <link
              href="/static/icons/icon167.png"
              rel="apple-touch-icon"
              sizes="167x167"
            />,
            <link
              href="/static/icons/icon180.png"
              rel="apple-touch-icon"
              sizes="180x180"
            />,
            <link
              href="/static/icons/icon192.png"
              rel="icon"
              sizes="192x192"
            />,
            <link
              href="/static/icons/icon128.png"
              rel="icon"
              sizes="128x128"
            />,
            <meta
              content="Gabriel Duarte"
              name="apple-mobile-web-app-title"
            />,
            <meta
              content="default"
              name="apple-mobile-web-app-status-bar-style"
            />,
            <meta
              content="yes"
              name="apple-mobile-web-app-capable"
            />,
            <meta
              content="yes"
              name="mobile-web-app-capable"
            />,
            <link
              href="/static/manifest.json"
              rel="manifest"
            />,
            <meta
              content="This is a portfolio that gives you information about who Gabriel Duarte is, and all of his latest works."
              name="Description"
            />,
            <title>
              Gabriel Duarte's Portfolio
            </title>,
            <link
              href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500"
              rel="stylesheet"
            />,
            <link
              href="https://cdn.jsdelivr.net/npm/modern-normalize@0.4.0/modern-normalize.min.css"
              rel="stylesheet"
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <script
                  async={true}
                  src="https://www.googletagmanager.com/gtag/js?id=UA-106120004-2"
                />,
                <script
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "window.dataLayer = window.dataLayer || [];
                  function gtag(){dataLayer.push(arguments);}
                  gtag('js', new Date());
                  gtag('config', 'UA-106120004-2');",
                    }
                  }
                />,
                <script
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "(function(h,o,t,j,a,r){
                    h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
                    h._hjSettings={hjid:848161,hjsv:6};
                    a=o.getElementsByTagName('head')[0];
                    r=o.createElement('script');r.async=1;
                    r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
                    a.appendChild(r);
                })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');",
                    }
                  }
                />,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "async": true,
                  "src": "https://www.googletagmanager.com/gtag/js?id=UA-106120004-2",
                },
                "ref": null,
                "rendered": null,
                "type": "script",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "dangerouslySetInnerHTML": Object {
                    "__html": "window.dataLayer = window.dataLayer || [];
                  function gtag(){dataLayer.push(arguments);}
                  gtag('js', new Date());
                  gtag('config', 'UA-106120004-2');",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": "script",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "dangerouslySetInnerHTML": Object {
                    "__html": "(function(h,o,t,j,a,r){
                    h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
                    h._hjSettings={hjid:848161,hjsv:6};
                    a=o.getElementsByTagName('head')[0];
                    r=o.createElement('script');r.async=1;
                    r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
                    a.appendChild(r);
                })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": "script",
              },
            ],
            "type": Symbol(react.fragment),
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "content": "width=device-width, initial-scale=1.0",
              "name": "viewport",
            },
            "ref": null,
            "rendered": null,
            "type": "meta",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "content": "ie=edge",
              "httpEquiv": "X-UA-Compatible",
            },
            "ref": null,
            "rendered": null,
            "type": "meta",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "content": "#343e46",
              "name": "theme-color",
            },
            "ref": null,
            "rendered": null,
            "type": "meta",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "href": "/static/icons/icon57.png",
              "rel": "apple-touch-icon",
              "sizes": "57x57",
            },
            "ref": null,
            "rendered": null,
            "type": "link",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "href": "/static/icons/icon76.png",
              "rel": "apple-touch-icon",
              "sizes": "76x76",
            },
            "ref": null,
            "rendered": null,
            "type": "link",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "href": "/static/icons/icon120.png",
              "rel": "apple-touch-icon",
              "sizes": "120x120",
            },
            "ref": null,
            "rendered": null,
            "type": "link",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "href": "/static/icons/icon152.png",
              "rel": "apple-touch-icon",
              "sizes": "152x152",
            },
            "ref": null,
            "rendered": null,
            "type": "link",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "href": "/static/icons/icon167.png",
              "rel": "apple-touch-icon",
              "sizes": "167x167",
            },
            "ref": null,
            "rendered": null,
            "type": "link",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "href": "/static/icons/icon180.png",
              "rel": "apple-touch-icon",
              "sizes": "180x180",
            },
            "ref": null,
            "rendered": null,
            "type": "link",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "href": "/static/icons/icon192.png",
              "rel": "icon",
              "sizes": "192x192",
            },
            "ref": null,
            "rendered": null,
            "type": "link",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "href": "/static/icons/icon128.png",
              "rel": "icon",
              "sizes": "128x128",
            },
            "ref": null,
            "rendered": null,
            "type": "link",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "content": "Gabriel Duarte",
              "name": "apple-mobile-web-app-title",
            },
            "ref": null,
            "rendered": null,
            "type": "meta",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "content": "default",
              "name": "apple-mobile-web-app-status-bar-style",
            },
            "ref": null,
            "rendered": null,
            "type": "meta",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "content": "yes",
              "name": "apple-mobile-web-app-capable",
            },
            "ref": null,
            "rendered": null,
            "type": "meta",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "content": "yes",
              "name": "mobile-web-app-capable",
            },
            "ref": null,
            "rendered": null,
            "type": "meta",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "href": "/static/manifest.json",
              "rel": "manifest",
            },
            "ref": null,
            "rendered": null,
            "type": "link",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "content": "This is a portfolio that gives you information about who Gabriel Duarte is, and all of his latest works.",
              "name": "Description",
            },
            "ref": null,
            "rendered": null,
            "type": "meta",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Gabriel Duarte's Portfolio",
            },
            "ref": null,
            "rendered": "Gabriel Duarte's Portfolio",
            "type": "title",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "href": "https://fonts.googleapis.com/css?family=Montserrat:300,400,500",
              "rel": "stylesheet",
            },
            "ref": null,
            "rendered": null,
            "type": "link",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "href": "https://cdn.jsdelivr.net/npm/modern-normalize@0.4.0/modern-normalize.min.css",
              "rel": "stylesheet",
            },
            "ref": null,
            "rendered": null,
            "type": "link",
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Main />,
            <NextScript />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "body",
      },
    ],
    "type": "html",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Head>
            <UNDEFINED>
              <script
                async={true}
                src="https://www.googletagmanager.com/gtag/js?id=UA-106120004-2"
              />
              <script
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "window.dataLayer = window.dataLayer || [];
                  function gtag(){dataLayer.push(arguments);}
                  gtag('js', new Date());
                  gtag('config', 'UA-106120004-2');",
                  }
                }
              />
              <script
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "(function(h,o,t,j,a,r){
                    h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
                    h._hjSettings={hjid:848161,hjsv:6};
                    a=o.getElementsByTagName('head')[0];
                    r=o.createElement('script');r.async=1;
                    r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
                    a.appendChild(r);
                })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');",
                  }
                }
              />
            </UNDEFINED>
            <meta
              content="width=device-width, initial-scale=1.0"
              name="viewport"
            />
            <meta
              content="ie=edge"
              httpEquiv="X-UA-Compatible"
            />
            <meta
              content="#343e46"
              name="theme-color"
            />
            <link
              href="/static/icons/icon57.png"
              rel="apple-touch-icon"
              sizes="57x57"
            />
            <link
              href="/static/icons/icon76.png"
              rel="apple-touch-icon"
              sizes="76x76"
            />
            <link
              href="/static/icons/icon120.png"
              rel="apple-touch-icon"
              sizes="120x120"
            />
            <link
              href="/static/icons/icon152.png"
              rel="apple-touch-icon"
              sizes="152x152"
            />
            <link
              href="/static/icons/icon167.png"
              rel="apple-touch-icon"
              sizes="167x167"
            />
            <link
              href="/static/icons/icon180.png"
              rel="apple-touch-icon"
              sizes="180x180"
            />
            <link
              href="/static/icons/icon192.png"
              rel="icon"
              sizes="192x192"
            />
            <link
              href="/static/icons/icon128.png"
              rel="icon"
              sizes="128x128"
            />
            <meta
              content="Gabriel Duarte"
              name="apple-mobile-web-app-title"
            />
            <meta
              content="default"
              name="apple-mobile-web-app-status-bar-style"
            />
            <meta
              content="yes"
              name="apple-mobile-web-app-capable"
            />
            <meta
              content="yes"
              name="mobile-web-app-capable"
            />
            <link
              href="/static/manifest.json"
              rel="manifest"
            />
            <meta
              content="This is a portfolio that gives you information about who Gabriel Duarte is, and all of his latest works."
              name="Description"
            />
            <title>
              Gabriel Duarte's Portfolio
            </title>
            <link
              href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500"
              rel="stylesheet"
            />
            <link
              href="https://cdn.jsdelivr.net/npm/modern-normalize@0.4.0/modern-normalize.min.css"
              rel="stylesheet"
            />
          </Head>,
          <body>
            <Main />
            <NextScript />
          </body>,
        ],
        "lang": "en",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <UNDEFINED>
                <script
                  async={true}
                  src="https://www.googletagmanager.com/gtag/js?id=UA-106120004-2"
                />
                <script
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "window.dataLayer = window.dataLayer || [];
                  function gtag(){dataLayer.push(arguments);}
                  gtag('js', new Date());
                  gtag('config', 'UA-106120004-2');",
                    }
                  }
                />
                <script
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "(function(h,o,t,j,a,r){
                    h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
                    h._hjSettings={hjid:848161,hjsv:6};
                    a=o.getElementsByTagName('head')[0];
                    r=o.createElement('script');r.async=1;
                    r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
                    a.appendChild(r);
                })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');",
                    }
                  }
                />
              </UNDEFINED>,
              <meta
                content="width=device-width, initial-scale=1.0"
                name="viewport"
              />,
              <meta
                content="ie=edge"
                httpEquiv="X-UA-Compatible"
              />,
              <meta
                content="#343e46"
                name="theme-color"
              />,
              <link
                href="/static/icons/icon57.png"
                rel="apple-touch-icon"
                sizes="57x57"
              />,
              <link
                href="/static/icons/icon76.png"
                rel="apple-touch-icon"
                sizes="76x76"
              />,
              <link
                href="/static/icons/icon120.png"
                rel="apple-touch-icon"
                sizes="120x120"
              />,
              <link
                href="/static/icons/icon152.png"
                rel="apple-touch-icon"
                sizes="152x152"
              />,
              <link
                href="/static/icons/icon167.png"
                rel="apple-touch-icon"
                sizes="167x167"
              />,
              <link
                href="/static/icons/icon180.png"
                rel="apple-touch-icon"
                sizes="180x180"
              />,
              <link
                href="/static/icons/icon192.png"
                rel="icon"
                sizes="192x192"
              />,
              <link
                href="/static/icons/icon128.png"
                rel="icon"
                sizes="128x128"
              />,
              <meta
                content="Gabriel Duarte"
                name="apple-mobile-web-app-title"
              />,
              <meta
                content="default"
                name="apple-mobile-web-app-status-bar-style"
              />,
              <meta
                content="yes"
                name="apple-mobile-web-app-capable"
              />,
              <meta
                content="yes"
                name="mobile-web-app-capable"
              />,
              <link
                href="/static/manifest.json"
                rel="manifest"
              />,
              <meta
                content="This is a portfolio that gives you information about who Gabriel Duarte is, and all of his latest works."
                name="Description"
              />,
              <title>
                Gabriel Duarte's Portfolio
              </title>,
              <link
                href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500"
                rel="stylesheet"
              />,
              <link
                href="https://cdn.jsdelivr.net/npm/modern-normalize@0.4.0/modern-normalize.min.css"
                rel="stylesheet"
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <script
                    async={true}
                    src="https://www.googletagmanager.com/gtag/js?id=UA-106120004-2"
                  />,
                  <script
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "window.dataLayer = window.dataLayer || [];
                  function gtag(){dataLayer.push(arguments);}
                  gtag('js', new Date());
                  gtag('config', 'UA-106120004-2');",
                      }
                    }
                  />,
                  <script
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "(function(h,o,t,j,a,r){
                    h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
                    h._hjSettings={hjid:848161,hjsv:6};
                    a=o.getElementsByTagName('head')[0];
                    r=o.createElement('script');r.async=1;
                    r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
                    a.appendChild(r);
                })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');",
                      }
                    }
                  />,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "async": true,
                    "src": "https://www.googletagmanager.com/gtag/js?id=UA-106120004-2",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "script",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "dangerouslySetInnerHTML": Object {
                      "__html": "window.dataLayer = window.dataLayer || [];
                  function gtag(){dataLayer.push(arguments);}
                  gtag('js', new Date());
                  gtag('config', 'UA-106120004-2');",
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "script",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "dangerouslySetInnerHTML": Object {
                      "__html": "(function(h,o,t,j,a,r){
                    h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
                    h._hjSettings={hjid:848161,hjsv:6};
                    a=o.getElementsByTagName('head')[0];
                    r=o.createElement('script');r.async=1;
                    r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
                    a.appendChild(r);
                })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');",
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "script",
                },
              ],
              "type": Symbol(react.fragment),
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "content": "width=device-width, initial-scale=1.0",
                "name": "viewport",
              },
              "ref": null,
              "rendered": null,
              "type": "meta",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "content": "ie=edge",
                "httpEquiv": "X-UA-Compatible",
              },
              "ref": null,
              "rendered": null,
              "type": "meta",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "content": "#343e46",
                "name": "theme-color",
              },
              "ref": null,
              "rendered": null,
              "type": "meta",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "href": "/static/icons/icon57.png",
                "rel": "apple-touch-icon",
                "sizes": "57x57",
              },
              "ref": null,
              "rendered": null,
              "type": "link",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "href": "/static/icons/icon76.png",
                "rel": "apple-touch-icon",
                "sizes": "76x76",
              },
              "ref": null,
              "rendered": null,
              "type": "link",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "href": "/static/icons/icon120.png",
                "rel": "apple-touch-icon",
                "sizes": "120x120",
              },
              "ref": null,
              "rendered": null,
              "type": "link",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "href": "/static/icons/icon152.png",
                "rel": "apple-touch-icon",
                "sizes": "152x152",
              },
              "ref": null,
              "rendered": null,
              "type": "link",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "href": "/static/icons/icon167.png",
                "rel": "apple-touch-icon",
                "sizes": "167x167",
              },
              "ref": null,
              "rendered": null,
              "type": "link",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "href": "/static/icons/icon180.png",
                "rel": "apple-touch-icon",
                "sizes": "180x180",
              },
              "ref": null,
              "rendered": null,
              "type": "link",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "href": "/static/icons/icon192.png",
                "rel": "icon",
                "sizes": "192x192",
              },
              "ref": null,
              "rendered": null,
              "type": "link",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "href": "/static/icons/icon128.png",
                "rel": "icon",
                "sizes": "128x128",
              },
              "ref": null,
              "rendered": null,
              "type": "link",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "content": "Gabriel Duarte",
                "name": "apple-mobile-web-app-title",
              },
              "ref": null,
              "rendered": null,
              "type": "meta",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "content": "default",
                "name": "apple-mobile-web-app-status-bar-style",
              },
              "ref": null,
              "rendered": null,
              "type": "meta",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "content": "yes",
                "name": "apple-mobile-web-app-capable",
              },
              "ref": null,
              "rendered": null,
              "type": "meta",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "content": "yes",
                "name": "mobile-web-app-capable",
              },
              "ref": null,
              "rendered": null,
              "type": "meta",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "href": "/static/manifest.json",
                "rel": "manifest",
              },
              "ref": null,
              "rendered": null,
              "type": "link",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "content": "This is a portfolio that gives you information about who Gabriel Duarte is, and all of his latest works.",
                "name": "Description",
              },
              "ref": null,
              "rendered": null,
              "type": "meta",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Gabriel Duarte's Portfolio",
              },
              "ref": null,
              "rendered": "Gabriel Duarte's Portfolio",
              "type": "title",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "href": "https://fonts.googleapis.com/css?family=Montserrat:300,400,500",
                "rel": "stylesheet",
              },
              "ref": null,
              "rendered": null,
              "type": "link",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "href": "https://cdn.jsdelivr.net/npm/modern-normalize@0.4.0/modern-normalize.min.css",
                "rel": "stylesheet",
              },
              "ref": null,
              "rendered": null,
              "type": "link",
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Main />,
              <NextScript />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "body",
        },
      ],
      "type": "html",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
